--- a/ig.ini
+++ b/ig.ini
@@ -1,6 +1,6 @@
 [IG]
 ig = input/ch.fhir.ig.ch-lab-order.xml
-template = https://github.com/ahdis/ig-template
+template = https://github.com/hl7ch/ig-template
 usage-stats-opt-out = false
 copyrightyear = 2020+
 license = CC-BY-SA-4.0
