--- a/ig.ini
+++ b/ig.ini
@@ -1,13 +1,3 @@
 [IG]
 ig = input/ch.fhir.ig.ch-lab-order.xml
-template = https://github.com/hl7ch/ig-template
-usage-stats-opt-out = false
-copyrightyear = 2021+
-license = CC-BY-SA-4.0
-version = 0.0.1
-ballotstatus = CI Build
-fhirspec = http://build.fhir.org/
-#excludexml = Yes
-#excludejson = Yes
-#excludettl = Yes
-#excludeMaps = Yes
+template = ch.fhir.ig.template#current
