--- a/ig.ini
+++ b/ig.ini
@@ -1,8 +1,8 @@
 [IG]
 ig = input/ch.fhir.ig.ch-lab-order.xml
-template = https://github.com/hl7ch/ig-template
+template = ch.fhir.ig.template#current
 usage-stats-opt-out = false
-copyrightyear = 2020+
+copyrightyear = 2021+
 license = CC-BY-SA-4.0
 version = 0.0.1
 ballotstatus = CI Build
