--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,6 +33,14 @@ jobs:
         echo test, and deploy your project.
         
     - name: Markdown Linting Action
-      uses: avto-dev/markdown-lint@v1.1.0
+      uses: avto-dev/markdown-lint@v1.5.0
       with:
         args: '*.md'
+      env:
+        MD002:
+          # Heading level
+          level: 2
+        MD013:
+          # Number of characters
+          line_length: false
+      
