--- a/input/data/features.yml
+++ b/input/data/features.yml
@@ -1,5 +1,4 @@
 ---
 feedback:
     active: true
-    formUrl: https://docs.google.com/forms/d/e/
-### TODO: richtige URI eingeben
+    ### TODO: richtige URI eingebenformUrl: https://docs.google.com/forms/d/e/
