--- a/ig.ini
+++ b/ig.ini
@@ -1,3 +1,3 @@
 [IG]
-ig = input/ch.fhir.ig.ch-lab-order.json
+ig = fsh-generated/resources/ImplementationGuide-ch.fhir.ig.ch-lab-order.json
 template = ch.fhir.ig.template#current
