replace ch-orf current by 0.10.0

--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -20,7 +20,7 @@ contact:
     system: url
     value: https://www.hl7.ch
 dependencies:
-  ch.fhir.ig.ch-orf: current
+  ch.fhir.ig.ch-orf: 0.10.0
   ch.fhir.ig.ch-core: 2.0.0
 
 pages:
