prepare for STU 1

--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -7,11 +7,11 @@ status: active
 license: CC-BY-SA-4.0
 copyright: CC-BY-SA-4.0
 jurisdiction: urn:iso:std:iso:3166#CH
-date: 2021-10-22
-version: 0.1.0
+date: 2022-02-02
+version: 1.0.0
 fhirVersion: 4.0.1
 copyrightYear: 2021+
-releaseLabel: CI Build
+releaseLabel: STU 1
 publisher:
   name: HL7 Switzerland
 contact:
