--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -1,13 +1,13 @@
 canonical: http://fhir.ch/ig/ch-lab-order
 id: ch.fhir.ig.ch-lab-order
 name: CH_LAB_ORDER
-title: "CH LAB-Order (R4)"
+title: CH LAB-Order (R4)
 description: Implementation guide CH LAB-Order (R4)
 status: active
 license: CC-BY-SA-4.0
 copyright: CC-BY-SA-4.0
 jurisdiction: urn:iso:std:iso:3166#CH
-date: 2022-02-02
+date: 2022-02-22
 version: 1.0.0
 fhirVersion: 4.0.1
 copyrightYear: 2021+
@@ -20,7 +20,7 @@ contact:
     system: url
     value: https://www.hl7.ch
 dependencies:
-  ch.fhir.ig.ch-orf: current
+  ch.fhir.ig.ch-orf: 1.0.0
   ch.fhir.ig.ch-core: 2.0.0
 
 pages:
