fix GLN numbers, include modular Questionnaire

--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -20,10 +20,9 @@ contact:
     system: url
     value: https://www.hl7.ch
 dependencies:
-  ch.fhir.ig.ch-orf: 1.0.0
-  ch.fhir.ig.ch-core: 2.0.0
-  hl7.fhir.uv.sdc: 3.0.0
-
+  ch.fhir.ig.ch-orf: current
+  ch.fhir.ig.ch-core: current
+ 
 pages:
   index.md:
     title: Home
