--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -4,14 +4,14 @@ name: CH_LAB_ORDER
 title: CH LAB-Order (R4)
 description: Implementation guide CH LAB-Order (R4)
 status: active
-license: CC-BY-SA-4.0
-copyright: CC-BY-SA-4.0
+license: CC0-1.0
+copyright: CC0-1.0
 jurisdiction: urn:iso:std:iso:3166#CH
-date: 2022-02-22
-version: 1.0.0
+date: 2023-06-29
+version: 2.0.0-ballot
 fhirVersion: 4.0.1
 copyrightYear: 2021+
-releaseLabel: STU 1
+releaseLabel: ballot
 publisher:
   name: HL7 Switzerland
   url: https://www.hl7.ch
@@ -23,9 +23,10 @@ contact:
         use: work
 
 dependencies:
-  ch.fhir.ig.ch-orf: current
-  ch.fhir.ig.ch-core: current
-  ch.fhir.ig.ch-epr-term: 2.0.8
+  ch.fhir.ig.ch-epr-term: 2.0.9
+  hl7.terminology: 5.1.0
+  ch.fhir.ig.ch-orf: 2.0.0-ballot
+  ch.fhir.ig.ch-core: 4.0.0-ballot
   hl7.fhir.uv.order-catalog: 0.1.0 
    
 pages:
