--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -7,11 +7,11 @@ status: active
 license: CC0-1.0
 copyright: CC0-1.0
 jurisdiction: urn:iso:std:iso:3166#CH
-date: 2023-06-29
-version: 2.0.0-ballot
+date: 2023-11-30
+version: 2.0.0
 fhirVersion: 4.0.1
 copyrightYear: 2021+
-releaseLabel: ballot
+releaseLabel: ci-build
 publisher:
   name: HL7 Switzerland
   url: https://www.hl7.ch
