--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -1,8 +1,8 @@
 canonical: http://fhir.ch/ig/ch-lab-order
 id: ch.fhir.ig.ch-lab-order
-name: CH_LAB_ORDER by Form
+name: CH_LAB_ORDER
 title: CH LAB-Order (R4)
-description: Implementation guide CH CH LAB-Order by Form(R4)
+description: Implementation guide CH CH LAB-Order (R4)
 status: active
 license: CC0-1.0
 copyright: CC0-1.0
@@ -10,7 +10,7 @@ jurisdiction: urn:iso:std:iso:3166#CH
 date: 2023-11-30
 version: 2.0.0
 fhirVersion: 4.0.1
-copyrightYear: 2021+
+copyrightYear: 2023+
 releaseLabel: ci-build
 publisher:
   name: HL7 Switzerland
