change back to ci-build

--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -8,10 +8,10 @@ license: CC0-1.0
 copyright: CC0-1.0
 jurisdiction: urn:iso:std:iso:3166#CH
 date: 2024-06-18
-version: 2.0.0
+version: 3.0.0-ci-build
 fhirVersion: 4.0.1
 copyrightYear: 2021+
-releaseLabel: trial-use # ci-build | draft | qa-preview | ballot | trial-use | release | update | normative+trial-use
+releaseLabel: ci-build # ci-build | draft | qa-preview | ballot | trial-use | release | update | normative+trial-use
 publisher:
   name: HL7 Switzerland
   url: https://www.hl7.ch
