--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -54,3 +54,11 @@ pages:
     title: Terminology
   changelog.md:
     title: Changelog
+
+parameters:
+  allow-extensible-warnings: true
+  display-warnings: true  
+  path-expansion-params: '../../expansion-params.json'  # for using SNOMED CT Swiss Extension
+
+FSHOnly: false
+applyExtensionMetadataToRoot: false
