--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -26,6 +26,7 @@ dependencies:
   ch.fhir.ig.ch-epr-term: 2.0.10
   hl7.terminology: 5.1.0
   hl7.fhir.extensions.r5: 4.0.1
+  # ch.fhir.ig.ch-lab-report: 1.0.0
   ch.fhir.ig.ch-orf: 2.0.1
   ch.fhir.ig.ch-core: 4.0.1
   hl7.fhir.uv.order-catalog: 0.1.0
