--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -23,12 +23,12 @@ contact:
         use: work
 
 dependencies:
-  ch.fhir.ig.ch-epr-term: 2.0.10
-  hl7.terminology: 5.1.0
+  ch.fhir.ig.ch-core: 5.0.0
+  ch.fhir.ig.ch-term: 3.1.x
+  hl7.terminology.r4: 6.1.0
   hl7.fhir.extensions.r5: 4.0.1
   # ch.fhir.ig.ch-lab-report: 1.0.0
   ch.fhir.ig.ch-orf: 2.0.1
-  ch.fhir.ig.ch-core: 4.0.1
   hl7.fhir.uv.order-catalog: 0.1.0
    
 pages:
@@ -61,7 +61,6 @@ parameters:
 #   allow-extensible-warnings: true
 #   display-warnings: true  
   path-expansion-params: '../../expansion-params.json'  # for using SNOMED CT Swiss Extension
-  auto-oid-root: 2.16.756.5.30
 
 FSHOnly: false
 applyExtensionMetadataToRoot: false
