--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -23,10 +23,14 @@ contact:
         use: work
 
 dependencies:
-  ch.fhir.ig.ch-core: 5.0.0
-  ch.fhir.ig.ch-term: 3.1.0
-  hl7.terminology.r4: 6.3.0
-  ch.fhir.ig.ch-orf: 3.0.0
+  ch.fhir.ig.ch-core: current
+  ch.fhir.ig.ch-term: 
+    uri: http://fhir.ch/ig/ch-term/ImplementationGuide/ch.fhir.ig.ch-term
+    version: 3.1.x
+  hl7.terminology.r4:
+    uri: http://terminology.hl7.org/ImplementationGuide/hl7.terminology
+    version: 6.3.0
+  ch.fhir.ig.ch-orf: current
   hl7.fhir.uv.order-catalog: 0.1.0
    
 pages:
