some cleaning of unused examles

--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -60,9 +60,10 @@ pages:
     title: Changelog
 
 parameters:
-#   allow-extensible-warnings: true
-#   display-warnings: true  
+  allow-extensible-warnings: true
+  display-warnings: true  
   path-expansion-params: '../../expansion-params.json'  # for using SNOMED CT Swiss Extension
+  pin-canonicals: pin-multiples
 
 FSHOnly: false
 applyExtensionMetadataToRoot: false
