--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -26,7 +26,7 @@ dependencies:
   ch.fhir.ig.ch-core: current
   ch.fhir.ig.ch-term: 
     uri: http://fhir.ch/ig/ch-term/ImplementationGuide/ch.fhir.ig.ch-term
-    version: 3.1.x
+    version: current
   hl7.terminology.r4:
     uri: http://terminology.hl7.org/ImplementationGuide/hl7.terminology
     version: 6.3.0
