--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -27,9 +27,9 @@ dependencies:
   ch.fhir.ig.ch-term: 
     uri: http://fhir.ch/ig/ch-term/ImplementationGuide/ch.fhir.ig.ch-term
     version: current
-  hl7.terminology.r4:
-    uri: http://terminology.hl7.org/ImplementationGuide/hl7.terminology
-    version: 6.3.0
+  # hl7.terminology.r4:
+  #   uri: http://terminology.hl7.org/ImplementationGuide/hl7.terminology
+  #   version: 6.3.0
   ch.fhir.ig.ch-orf: current
   hl7.fhir.uv.order-catalog: 0.1.0
    
