--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -7,11 +7,11 @@ status: active
 license: CC0-1.0
 copyright: CC0-1.0
 jurisdiction: urn:iso:std:iso:3166#CH
-date: 2025-01-30
-version: 3.0.0
+date: 2025-05-22
+version: 3.0.0-ballot
 fhirVersion: 4.0.1
 copyrightYear: 2025+
-releaseLabel: ci-build # ci-build | draft | qa-preview | ballot | trial-use | release | update | normative+trial-use
+releaseLabel: ballot # ci-build | draft | qa-preview | ballot | trial-use | release | update | normative+trial-use
 publisher:
   name: HL7 Switzerland
   url: https://www.hl7.ch
@@ -23,14 +23,14 @@ contact:
         use: work
 
 dependencies:
-  ch.fhir.ig.ch-core: current
+  ch.fhir.ig.ch-core: 6.0.0-ballot
   ch.fhir.ig.ch-term: 
     uri: http://fhir.ch/ig/ch-term/ImplementationGuide/ch.fhir.ig.ch-term
-    version: current
+    version: 3.2.x
   # hl7.terminology.r4:
   #   uri: http://terminology.hl7.org/ImplementationGuide/hl7.terminology
   #   version: 6.3.0
-  ch.fhir.ig.ch-orf: current
+  ch.fhir.ig.ch-orf: 3.0.1
   hl7.fhir.uv.order-catalog: 0.1.0
    
 pages:
