--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -24,15 +24,15 @@ contact:
 
 dependencies:
   ch.fhir.ig.ch-core: current
-  ch.fhir.ig.ch-term: 
+  ch.fhir.ig.ch-term:
     uri: http://fhir.ch/ig/ch-term/ImplementationGuide/ch.fhir.ig.ch-term
-    version: current # 3.2.x
+    version: current
   # hl7.terminology.r4:
   #   uri: http://terminology.hl7.org/ImplementationGuide/hl7.terminology
   #   version: 6.3.0
-  ch.fhir.ig.ch-orf: current # 3.0.1
+  ch.fhir.ig.ch-orf: current
   hl7.fhir.uv.order-catalog: 0.1.0
-   
+
 pages:
   index.md:
     title: Home
@@ -61,8 +61,8 @@ pages:
 
 parameters:
   allow-extensible-warnings: true
-  display-warnings: true  
-  path-expansion-params: '../../expansion-params.json'  # for using SNOMED CT Swiss Extension
+  display-warnings: true
+  path-expansion-params: "../../expansion-params.json" # for using SNOMED CT Swiss Extension
   pin-canonicals: pin-multiples
 
 FSHOnly: false
