--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -31,7 +31,7 @@ dependencies:
   #   uri: http://terminology.hl7.org/ImplementationGuide/hl7.terminology
   #   version: 6.3.0
   ch.fhir.ig.ch-orf: current
-  hl7.fhir.uv.order-catalog: 0.1.0
+  hl7.fhir.uv.order-catalog: current
 
 pages:
   index.md:
