--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -29,9 +29,9 @@ dependencies:
     version: current
   hl7.terminology.r4:
     uri: http://terminology.hl7.org/ImplementationGuide/hl7.terminology
-    version: current
+    version: 5.5.0
   ch.fhir.ig.ch-orf: current
-  hl7.fhir.uv.order-catalog: 0.1.0
+  hl7.fhir.uv.order-catalog: current
 
 pages:
   index.md:
