--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -66,6 +66,7 @@ parameters:
   display-warnings: true
   path-expansion-params: "../../expansion-params.json" # for using SNOMED CT Swiss Extension
   pin-canonicals: pin-multiples
+  oid-root: "2.16.756.5.30.1.143.10"
 
 FSHOnly: false
 applyExtensionMetadataToRoot: false
