--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -11,7 +11,7 @@ date: 2025-12-15
 version: 3.0.0
 fhirVersion: 4.0.1
 copyrightYear: 2025+
-releaseLabel: release # ci-build | draft | qa-preview | ballot | trial-use | release | update | normative+trial-use
+releaseLabel: trial-use # ci-build | draft | qa-preview | ballot | trial-use | release | update | normative+trial-use
 publisher:
   name: HL7 Switzerland
   url: https://www.hl7.ch
@@ -26,7 +26,7 @@ dependencies:
   ch.fhir.ig.ch-core: current
   ch.fhir.ig.ch-term: 
     uri: http://fhir.ch/ig/ch-term/ImplementationGuide/ch.fhir.ig.ch-term
-    version: current # 3.2.x
+    version: current # 3.3.x
   # hl7.terminology.r4:
   #   uri: http://terminology.hl7.org/ImplementationGuide/hl7.terminology
   #   version: 6.3.0
